<resources>
    <string name="app_name">SunShine</string>
    <string name="daily">Next Days</string>
    <string name="hourly">Hourly</string>
    <string name="location_description">Location weather.</string>

    <!--    Weather-->
    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="fog">Fog</string>
    <string name="light_cloud">Light Cloud</string>
    <string name="light_rain">Light Rain</string>
    <string name="rain">Rain</string>
    <string name="storm">Storm</string>
    <string name="snow">Snow</string>

    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels like</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="wind_deg">Wind Deg.</string>

    <!--    Content Provider Authority-->
    <string name="content_authority">com.dog.sunshine.data.provider</string>

    <!--    Replace values-->
    <string name="temp_value" translatable="false">%d\u00b0</string>
    <string name="wind_degrees_value" translatable="false">%d\u00b0</string>
    <string name="weatherDescription" translatable="false">%s</string>
    <string name="humidity_value" translatable="false">%d\u2030</string>
    <string name="pressure_value" translatable="false">%dhPa</string>
    <string name="wind_speed_value" translatable="false">%dkm/h N</string>

    <!--    Settings preferences-->
    <string name="action_settings">Settings</string>
    <string name="metric_label">Metric - \u00b0C</string>
    <string name="imperial_label">Imperial - \u00b0F</string>

    <string name="type_degrees_key" translatable="false">type_degrees</string> <!-- Celsius or Fahrenheit-->
    <string name="metric_key" translatable="false">metric</string>
    <string name="imperial_key" translatable="false">imperial</string>

    <string name="pref_units">Temperature Untis</string>

<!--    Type param to get the right measurement-->
    <string name="temperature">Temperature</string>


    <!--    ERROR MESSAGES-->
    <string name="location_permission_denied">Weather app needs Location access to show you the accurate results.</string>
    <string name="permission_required">Permission required</string>
    <string name="ok">OK</string>
    <string name="not_supported">Device not supported</string>
    <string name="error_loading_data">Sorry, we can not load data.</string>
    <string name="internet_required">Internet connection is required to start the app</string>

</resources>