<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="today"
            type="com.dog.sunshine.data.weather.CurrentWeather" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/detail_accent_pane_background"
        android:padding="@dimen/defaultMargin"
        android:theme="@style/AppTheme.Detail">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_sunrise"
            android:layout_width="@dimen/sunstate"
            android:layout_height="@dimen/sunstate"
            android:layout_marginStart="@dimen/defaultMargin"
            android:src="@drawable/ic_clear"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_sunrise"
            app:layout_constraintStart_toEndOf="@+id/img_sunrise"
            app:layout_constraintTop_toTopOf="@+id/img_sunrise"
            app:setHour="@{today.sunrise}"
            tools:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_sunset"
            android:layout_width="@dimen/sunstate"
            android:layout_height="@dimen/sunstate"
            android:layout_marginStart="@dimen/defaultMargin"
            android:src="@drawable/moon"
            app:layout_constraintBottom_toBottomOf="@+id/img_sunrise"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/img_sunrise" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_sunset"
            app:layout_constraintStart_toEndOf="@+id/img_sunset"
            app:layout_constraintTop_toTopOf="@+id/img_sunset"
            app:setHour="@{today.sunset}"
            tools:text="@string/app_name" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:layout_marginStart="@dimen/defaultMargin"
            android:text="@string/feels_like"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
            app:layout_constraintStart_toStartOf="@+id/img_sunrise"
            app:layout_constraintTop_toBottomOf="@+id/txt_sunrise" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView_feels_like"
            app:layout_constraintStart_toStartOf="@+id/img_sunset"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView_feels_like"
            app:setTemp="@{today.feelsLike}"
            tools:text="@string/temp_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/humidity"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView_feels_like"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView_feels_like" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView"
            app:layout_constraintStart_toStartOf="@+id/txt_feels_like"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView"
            app:setValue="@{today.humidity}"
            app:setResource='@{"humidity_value"}'
            tools:text="@string/humidity_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/pressure"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView3"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView2"
            app:layout_constraintStart_toStartOf="@+id/txt_humidity"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView2"
            app:setValue="@{today.pressure}"
            app:setResource='@{"pressure_value"}'
            tools:text="@string/pressure_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/wind"
            app:layout_constraintBottom_toTopOf="@+id/appCompatTextView5"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView2"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView3"
            app:layout_constraintStart_toStartOf="@+id/txt_pressure"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView3"
            app:setValue="@{today.wind}"
            app:setResource='@{"wind_speed_value"}'
            tools:text="@string/wind_speed_value" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/defaultMargin"
            android:text="@string/wind_deg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/appCompatTextView3"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_wind_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/appCompatTextView5"
            app:layout_constraintStart_toStartOf="@+id/txt_wind"
            app:layout_constraintTop_toTopOf="@+id/appCompatTextView5"
            app:setValue="@{today.winddegrees}"
            app:setResource='@{"wind_degrees_value"}'
            tools:text="@string/temp_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>